--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: SDAMS
 Type: Package
 Title: Differential Abundant Analysis for Metabolomics and Proteomics Data
-Version: 0.99.4
+Version: 0.99.5
 Date: 2018-1-30
 Author: Yuntong Li <yuntong.li@uky.edu>, Chi Wang <chi.wang@uky.edu>, 
      Li Chen <lichenuky@uky.edu>
 Maintainer: Yuntong Li <yuntong.li@uky.edu>
-Depends: R(>= 3.4.3)
+Depends: R(>= 3.5), SummarizedExperiment
 Suggests: testthat
-Imports: trust, qvalue, Biobase, methods
+Imports: trust, qvalue, methods, stats, utils
 Description: This Package utilizes a Semi-parametric Differential Abundance 
      analysis (SDA) method for metabolomics and proteomics data from mass 
      spectrometry. SDA is able to robustly handle non-normally distributed data 
