--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,6 @@ importFrom("stats", "pnorm")
 importFrom("stats", "sd")
 importFrom("utils", "read.csv")
 
-export("createSEsetFromEnvir")
-export("createSEsetFromCSV")
+export("createSEFromMatrix")
+export("createSEFromCSV")
 export("SDA")
