add single-cell data example

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: SDAMS
 Type: Package
-Title: Differential Abundant Analysis for Metabolomics and Proteomics Data
-Version: 1.7.1
-Date: 2020-02-10
+Title: Differential Abundant Analysis for Metabolomics, Proteomics and 
+       single-cell RNA sequencing Data
+Version: 1.8.1
+Date: 2020-09-12
 Author: Yuntong Li <yuntong.li@uky.edu>, Chi Wang <chi.wang@uky.edu>, 
      Li Chen <lichenuky@uky.edu>
 Maintainer: Yuntong Li <yuntong.li@uky.edu>
@@ -11,9 +12,10 @@ Suggests: testthat
 Imports: trust, qvalue, methods, stats, utils
 Description: This Package utilizes a Semi-parametric Differential Abundance 
      analysis (SDA) method for metabolomics and proteomics data from mass 
-     spectrometry. SDA is able to robustly handle non-normally distributed data 
-     and provides a clear quantification of the effect size.
+     spectrometry as well as single cell RNA sequencing data. SDA is able to 
+     robustly handle non-normally distributed data and provides a clear 
+     quantification of the effect size.
 License: GPL
 LazyLoad: no
 NeedsCompilation: no
-biocViews: ImmunoOncology, DifferentialExpression, Metabolomics, Proteomics, MassSpectrometry
+biocViews: ImmunoOncology, DifferentialExpression, Metabolomics, Proteomics, MassSpectrometry, SingleCell
