--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ importFrom("stats", "pchisq")
 importFrom("stats", "pnorm")
 importFrom("stats", "sd")
 importFrom("utils", "read.csv")
+importFrom("stats", "aggregate")
+
 
 export("createSEFromMatrix")
 export("createSEFromCSV")
