--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,3 +19,4 @@ License: GPL
 LazyLoad: no
 NeedsCompilation: no
 biocViews: ImmunoOncology, DifferentialExpression, Metabolomics, Proteomics, MassSpectrometry, SingleCell
+Config/testthat/edition: 3
